fix: remove map configuration, shorten intervals